Closes #1139: Hides page overflow-x to prevent horizontal scrollbars.

--- a/themes/custom/az_barrio/css/style.css
+++ b/themes/custom/az_barrio/css/style.css
@@ -26,6 +26,11 @@ html.sticky-footer #main-wrapper {
   width: 100%;
 }
 
+/* Hide overflowing content */
+body {
+  overflow-x: hidden;
+}
+
 /* Correct `inline-block` display not defined in IE 8/9. */
 audio,
 canvas,
